plugins {
    id 'java'
    id 'idea'
    id 'org.springframework.boot' version '2.1.7.RELEASE'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_11

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    def graphqlStarterVersion = '5.10.0'
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "com.graphql-java-kickstart:graphql-spring-boot-starter:${graphqlStarterVersion}"
    implementation 'com.zhokhov.graphql:graphql-datetime-spring-boot-starter:1.5.1'
    runtimeOnly "com.graphql-java-kickstart:altair-spring-boot-starter:${graphqlStarterVersion}"
    runtimeOnly "com.graphql-java-kickstart:graphiql-spring-boot-starter:${graphqlStarterVersion}"
    runtimeOnly "com.graphql-java-kickstart:voyager-spring-boot-starter:${graphqlStarterVersion}"
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "com.graphql-java-kickstart:graphql-spring-boot-starter-test:${graphqlStarterVersion}"
}

bootRun {
    jvmArgs = ['--illegal-access=warn']
}
